Update Noraxon Service

--- a/NoraxonService.csproj
+++ b/NoraxonService.csproj
@@ -35,6 +35,7 @@
     <PackageReference Include="Grpc.AspNetCore.Server.Reflection" Version="2.40.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="7.0.0" />
+    <PackageReference Include="Sentry.AspNetCore" Version="3.24.0" />
   </ItemGroup>
 
 </Project>
